// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification disabled 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        <strong>
          To use this domain for sending
        </strong>
        , add this TXT record to your DNS settings, paying close attention to the specified hostname.
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Table>
          <tbody>
            <Table.Row>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 8,
                  }
                }
              />
              <Table.HeaderCell
                style={
                  Object {
                    "width": 70,
                  }
                }
              >
                Type
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                Hostname
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </Table.HeaderCell>
            </Table.Row>
            <Table.Row>
              <Table.Cell>
                <Icon
                  name="Error"
                  size={18}
                  style={
                    Object {
                      "color": "red",
                    }
                  }
                />
              </Table.Cell>
              <Table.Cell>
                TXT
              </Table.Cell>
              <Table.Cell>
                scph0118._domainkey.xyz.com
              </Table.Cell>
              <Table.Cell>
                v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
              </Table.Cell>
            </Table.Row>
          </tbody>
        </Table>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification enabled 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        We recommend DNS verification, but if you don't have DNS access, you can 
        <a>
          set this domain up for sending via email
        </a>
        .
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Table>
          <tbody>
            <Table.Row>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 8,
                  }
                }
              />
              <Table.HeaderCell
                style={
                  Object {
                    "width": 70,
                  }
                }
              >
                Type
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                Hostname
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </Table.HeaderCell>
            </Table.Row>
            <Table.Row>
              <Table.Cell>
                <Icon
                  name="Error"
                  size={18}
                  style={
                    Object {
                      "color": "red",
                    }
                  }
                />
              </Table.Cell>
              <Table.Cell>
                TXT
              </Table.Cell>
              <Table.Cell>
                scph0118._domainkey.xyz.com
              </Table.Cell>
              <Table.Cell>
                v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
              </Table.Cell>
            </Table.Row>
          </tbody>
        </Table>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly when ownership and DKIM are verified 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        This domain is all set up to send with DKIM-signing. Nice work!
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Table>
          <tbody>
            <Table.Row>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 8,
                  }
                }
              />
              <Table.HeaderCell
                style={
                  Object {
                    "width": 70,
                  }
                }
              >
                Type
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                Hostname
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </Table.HeaderCell>
            </Table.Row>
            <Table.Row>
              <Table.Cell>
                <Icon
                  name="Check"
                  size={18}
                  style={
                    Object {
                      "color": "green",
                    }
                  }
                />
              </Table.Cell>
              <Table.Cell>
                TXT
              </Table.Cell>
              <Table.Cell>
                scph0118._domainkey.xyz.com
              </Table.Cell>
              <Table.Cell>
                v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
              </Table.Cell>
            </Table.Row>
          </tbody>
        </Table>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly when ownership is valid and DKIM is unverified 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <Banner
        status="warning"
      >
        This domain is "ready for sending" but if you plan to use it for sending, we still recommend that you add this TXT record to make it "ready for DKIM" as well.
      </Banner>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Table>
          <tbody>
            <Table.Row>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 8,
                  }
                }
              />
              <Table.HeaderCell
                style={
                  Object {
                    "width": 70,
                  }
                }
              >
                Type
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                Hostname
              </Table.HeaderCell>
              <Table.HeaderCell
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </Table.HeaderCell>
            </Table.Row>
            <Table.Row>
              <Table.Cell>
                <Icon
                  name="Error"
                  size={18}
                  style={
                    Object {
                      "color": "red",
                    }
                  }
                />
              </Table.Cell>
              <Table.Cell>
                TXT
              </Table.Cell>
              <Table.Cell>
                scph0118._domainkey.xyz.com
              </Table.Cell>
              <Table.Cell>
                v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
              </Table.Cell>
            </Table.Row>
          </tbody>
        </Table>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;
